--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,9 @@ libc = { version = "0.2.82", features = [ "extra_traits" ] }
 bitflags = "1.1"
 cfg-if = "1.0"
 
+[target.'cfg(not(target_os = "redox"))'.dependencies]
+memoffset = "0.6.3"
+
 [target.'cfg(target_os = "dragonfly")'.build-dependencies]
 cc = "1"
 
