--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -22,6 +22,7 @@ task:
     - cargo test --target i686-unknown-freebsd
   before_cache_script: rm -rf $CARGO_HOME/registry/index
 
+# Test OSX and iOS in a full VM
 task:
   matrix:
     - name: OSX x86_64
@@ -162,14 +163,12 @@ task:
     - name: Linux x32
       env:
         TARGET: x86_64-unknown-linux-gnux32
-        CHECK_TESTS: true
     - name: NetBSD x86_64
       env:
         TARGET: x86_64-unknown-netbsd
     - name: Fuchsia x86_64
       env:
         TARGET: x86_64-fuchsia
-        CHECK_TESTS: true
   container:
     image: rust:1.40
   setup_script:
@@ -177,9 +176,7 @@ task:
   script:
     - cargo +$TOOLCHAIN check --target $TARGET
     - cargo +$TOOLCHAIN check --target $TARGET --release
-    - 'if [ "$CHECK_TESTS" == true ]; then cargo +$TOOLCHAIN check --all-targets --target $TARGET; fi'
-    # TODO: check the tests, too.  The old Travis CI setup didn't do that, so
-    # they don't build on all platforms.
+    - cargo +$TOOLCHAIN check --all-targets --target $TARGET
   before_cache_script: rm -rf $CARGO_HOME/registry/index
 
 # illumos toolchain isn't available via rustup until 1.50
