--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,9 +32,12 @@ targets = [
 ]
 
 [dependencies]
-libc = { version = "0.2.82", features = [ "extra_traits" ] }
+libc = { version = "0.2.93", features = [ "extra_traits" ] }
 bitflags = "1.1"
 cfg-if = "1.0"
+
+[target.'cfg(not(target_os = "redox"))'.dependencies]
+memoffset = "0.6.3"
 
 [target.'cfg(target_os = "dragonfly")'.build-dependencies]
 cc = "1"
