Adapt aio to the world of async/await, and fix some potential unsoundness.
* libc::aiocb must not be moved while the kernel has a pointer to it.
  This change enforces that requirement by using std::pin.

* Split LioCbBuilder out of LioCb.  struct LioCb relied on the
  (incorrect) assumption that a Vec's elements have a stable location in
  memory.  That's not true; they can be moved during Vec::push.  The
  solution is to use a Vec in the new Builder struct, but finalize it to
  a boxed slice (which doesn't support push) before allowing it to be
  submitted to the kernel.

* Eliminate owned buffer types.  mio-aio no longer uses owned buffers
  with nix::aio.  There's little need for it in the world of
  async/await.  I'm not aware of any other consumers.  This
  substantially simplifies the code.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ memoffset = "0.6.3"
 cc = "1"
 
 [dev-dependencies]
-bytes = "0.4.8"
+assert-impl = "0.1"
 lazy_static = "1.2"
 rand = "0.8"
 tempfile = "3.2.0"
