--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ targets = [
 ]
 
 [dependencies]
-libc = { git = "https://github.com/rust-lang/libc", rev = "f5e31f208", features = [ "extra_traits" ] }
+libc = { version = "0.2.99", features = [ "extra_traits" ] }
 bitflags = "1.3.1"
 cfg-if = "1.0"
 
