--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ targets = [
 
 [dependencies]
 libc = { version = "0.2.82", features = [ "extra_traits" ] }
-bitflags = "1.1"
+bitflags = ">= 1.1.0, < 1.3.0"
 cfg-if = "1.0"
 
 [target.'cfg(target_os = "dragonfly")'.build-dependencies]
