--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ targets = [
 
 [dependencies]
 libc = { version = "0.2.98", features = [ "extra_traits" ] }
-bitflags = "1.1"
+bitflags = ">= 1.1.0, < 1.3.0"
 cfg-if = "1.0"
 
 [target.'cfg(not(target_os = "redox"))'.dependencies]
