--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -49,9 +49,6 @@ task:
     HOME: /tmp/home
     PATH: $HOME/.cargo/bin:$PATH
   matrix:
-    - name: Linux aarch64
-      env:
-        TARGET: aarch64-unknown-linux-gnu
     - name: Linux arm gnueabi
       env:
         TARGET: arm-unknown-linux-gnueabi
@@ -101,25 +98,31 @@ task:
 task:
   matrix:
     - name: Rust Stable
+      container:
+        image: rust:latest
       env:
         TARGET: x86_64-unknown-linux-gnu
-        TOOLCHAIN: stable
+    - name: Linux aarch64
+      arm_container:
+        image: rust:1.46
+      env:
+        TARGET: aarch64-unknown-linux-gnu
     - name: Linux x86_64
+      container:
+        image: rust:1.46
       env:
         TARGET: x86_64-unknown-linux-gnu
-        TOOLCHAIN: 1.46.0
     - name: Linux x86_64 musl
+      container:
+        image: rust:1.46
       env:
         TARGET: x86_64-unknown-linux-musl
-        TOOLCHAIN: 1.46.0
-  container:
-    image: rust:1.46
   setup_script:
-    - rustup toolchain install $TOOLCHAIN
-    - rustup target add --toolchain $TOOLCHAIN $TARGET
+    - rustup target add $TARGET
+    - uname -a
   script:
-    - cargo +$TOOLCHAIN build --target $TARGET --all-targets
-    - cargo +$TOOLCHAIN test --target $TARGET
+    - cargo build --target $TARGET --all-targets
+    - cargo test --target $TARGET
   before_cache_script: rm -rf $CARGO_HOME/registry/index
 
 # Tasks for cross-compiling, but no testing
