--- a/bors.toml
+++ b/bors.toml
@@ -4,6 +4,7 @@ status = [
   "Android armv7",
   "Android i686",
   "Android x86_64",
+  "DragonFly BSD x86_64",
   "FreeBSD amd64 & i686",
   "Fuchsia x86_64",
   "Linux MIPS",
@@ -25,6 +26,7 @@ status = [
   "Linux x86_64",
   "Minver",
   "NetBSD x86_64",
+  "OpenBSD x86_64",
   "OSX x86_64",
   "Redox x86_64",
   "Rust Stable",
