--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,14 +36,10 @@ memoffset = "0.6.3"
 [features]
 default = [
   "acct", "aio", "dir", "env", "event", "features", "fs",
-  "hostname",
-  "inotify", "ioctl", "kmod", "mman", "mount", "mqueue",
-  "net", "personality", "process", "poll", "pthread", "ptrace", "quota",
-  "reboot",
-  "resource", "sched", "signal",
-  "socket",
-  "term", "time", "ucontext", "uio",
-  "users", "zerocopy",
+  "hostname", "inotify", "ioctl", "kmod", "mman", "mount", "mqueue",
+  "net", "personality", "poll", "process", "pthread", "ptrace", "quota",
+  "reboot", "resource", "sched", "signal", "socket", "term", "time",
+  "ucontext", "uio", "users", "zerocopy",
 ]
 
 acct = []
