--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -223,9 +223,9 @@ task:
       env:
         TARGET: x86_64-unknown-redox
         # Redox requires a nightly compiler.
-        # If stuff breaks, change nightly to the date in the toolchain_*
-        # directory at https://static.redox-os.org
-        TOOLCHAIN: nightly-2020-08-04
+        # If stuff breaks, change nightly to the date at
+        # https://gitlab.redox-os.org/redox-os/redox/-/blob/master/rust-toolchain
+        TOOLCHAIN: nightly-2021-06-15
   setup_script:
     - rustup target add $TARGET
     - rustup toolchain install $TOOLCHAIN --profile minimal --target $TARGET
