Suppress deprecation warnings on Dragonfly
libc::stat is deprecated on DragonflyBSD in libc.  But there isn't any
alternative yet, so Nix must simply suppress the warnings.  It's used in
too many places to suppress each one individually, so just suppress all
deprecation warnings globally until it's properly fixed.

https://github.com/rust-lang/libc/pull/2522

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -245,6 +245,10 @@ task:
     - name: DragonFly BSD x86_64
       env:
         TARGET: x86_64-unknown-dragonfly
+        # Temporarily allow deprecation on DragonflyBSD until an alternative is
+        # available.
+        #https://github.com/rust-lang/libc/pull/2522
+        RUSTFLAGS: -D warnings -A deprecated
     - name: OpenBSD x86_64
       env:
         TARGET: x86_64-unknown-openbsd
