Ensure that MSRV tests do not regress
When testing with older versions of rustc, there's a CI failure mode
when our dependency, which used to be compatible with that Rust version,
publishes a new version which can't be compiled using that old Rust
anymore. That's pretty unfortunate, as that means that third parties can
break our CI without any changes to the code in this repo.

To protect against that, let's use Cargo.lock on CI, but only when
testing against older versions. For stable Rust, we continue to generate
Cargo.lock with freshest dependencies. Implementation wise, we save
known-good Cargo.lock as `Cargo.lock.msrv`, and just copy that in every
relevant CI job.

To get a working `Cargo.lock.msrv`, I run `cargo +nightly
generate-lockfile -Zminimal-versions` -- that is guaranteed to support
the oldest Rust version we can.

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -17,6 +17,7 @@ task:
     - fetch https://sh.rustup.rs -o rustup.sh
     - sh rustup.sh -y --profile=minimal --default-toolchain 1.41.0
     - $HOME/.cargo/bin/rustup target add i686-unknown-freebsd
+    - cp Cargo.lock.msrv Cargo.lock
   amd64_test_script:
     - . $HOME/.cargo/env
     - cargo test
@@ -49,6 +50,7 @@ task:
     - sh rustup.sh -y --profile=minimal --default-toolchain 1.41.0
     - . $HOME/.cargo/env
     - bash ci/install.sh
+    - cp Cargo.lock.msrv Cargo.lock
   script:
     - . $HOME/.cargo/env
     - bash ci/script.sh
@@ -104,18 +106,15 @@ task:
     - sh rustup.sh -y --profile=minimal --default-toolchain 1.41.0
     - . $HOME/.cargo/env
     - bash ci/install.sh
+    - cp Cargo.lock.msrv Cargo.lock
   script:
     - . $HOME/.cargo/env || true
     - bash ci/script.sh
   before_cache_script: rm -rf $CARGO_HOME/registry/index
 
-# Tasks for Linux amd64 builds
+# Tasks for Linux amd64 builds MSRV
 task:
   matrix:
-    - name: Rust Stable
-      env:
-        TARGET: x86_64-unknown-linux-gnu
-        TOOLCHAIN: stable
     - name: Linux x86_64
       env:
         TARGET: x86_64-unknown-linux-gnu
@@ -129,11 +128,27 @@ task:
   setup_script:
     - rustup toolchain install $TOOLCHAIN
     - rustup target add --toolchain $TOOLCHAIN $TARGET
+    - cp Cargo.lock.msrv Cargo.lock
   script:
     - cargo +$TOOLCHAIN build --target $TARGET --all-targets
     - cargo +$TOOLCHAIN build --target $TARGET --all-targets --release
     - cargo +$TOOLCHAIN test --target $TARGET
     - cargo +$TOOLCHAIN test --target $TARGET --release
+  before_cache_script: rm -rf $CARGO_HOME/registry/index
+
+# Tasks for Linux amd64 builds Stable
+task:
+  name: Rust Stable
+  env:
+    TARGET: x86_64-unknown-linux-gnu
+    TOOLCHAIN: stable
+  container:
+    image: rust
+  script:
+    - cargo build --all-targets
+    - cargo build --all-targets --release
+    - cargo test
+    - cargo test --release
   before_cache_script: rm -rf $CARGO_HOME/registry/index
 
 # Tasks for cross-compiling, but no testing
@@ -176,6 +191,7 @@ task:
     image: rust:1.41
   setup_script:
     - rustup target add $TARGET
+    - cp Cargo.lock.msrv Cargo.lock
   script:
     - cargo +$TOOLCHAIN check --target $TARGET
     - cargo +$TOOLCHAIN check --target $TARGET --release
@@ -191,6 +207,7 @@ task:
     image: rust:1.50
   setup_script:
     - rustup target add $TARGET
+    - cp Cargo.lock.msrv Cargo.lock
   script:
     - cargo +$TOOLCHAIN check --target $TARGET
     - cargo +$TOOLCHAIN check --target $TARGET --release
