--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -281,6 +281,9 @@ task:
     - name: OpenBSD x86_64
       env:
         TARGET: x86_64-unknown-openbsd
+    - name: Linux armv7 uclibceabihf
+      env:
+        TARGET: armv7-unknown-linux-uclibceabihf
   setup_script:
     - rustup component add rust-src
   << : *BUILD
