--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -40,6 +40,7 @@ task:
   freebsd_instance:
     image: freebsd-12-2-release-amd64
   setup_script:
+    - kldload mqueuefs
     - fetch https://sh.rustup.rs -o rustup.sh
     - sh rustup.sh -y --profile=minimal --default-toolchain $TOOLCHAIN
     - . $HOME/.cargo/env
