--- a/bors.toml
+++ b/bors.toml
@@ -25,10 +25,11 @@ status = [
   "Linux x32",
   "Linux x86_64 musl",
   "Linux x86_64",
+  "macOS aarch64",
+  "macOS x86_64",
   "Minver",
   "NetBSD x86_64",
   "OpenBSD x86_64",
-  "OSX x86_64",
   "Redox x86_64",
   "Rust Stable",
   "iOS aarch64",
