Use the nightly toolchain for Redox
The latest redox-syscall crate requires at least Rust 1.59.0, but they
don't define an MSRV policy.  And the version given in the
rust-toolchain file in the Redox repository doesn't work.  So until they
clarify their MSRV, use nightly.

https://gitlab.redox-os.org/redox-os/syscall/-/commit/30f29c32952343412bb6c36c9fda136d26e9431f

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -244,11 +244,9 @@ task:
     BUILD: check
   name: Redox x86_64
   env:
-   TARGET: x86_64-unknown-redox
-   # Redox requires a nightly compiler.
-   # If stuff breaks, change nightly to the date at
-   # https://gitlab.redox-os.org/redox-os/redox/-/blob/master/rust-toolchain
-   TOOLCHAIN: nightly-2021-06-15
+    TARGET: x86_64-unknown-redox
+    # Redox's MSRV policy is unclear.  Until they define it, use nightly.
+    TOOLCHAIN: nightly
   setup_script:
     - rustup target add $TARGET
     - rustup toolchain install $TOOLCHAIN --profile minimal --target $TARGET
